2004-12-03 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NetworkStream.cs: Write should ensure that writes all the contents
	of the buffer. Fixes bug #70123. Besos para Miguelito.

2004-10-14  Dick Porter  <dick@ximian.com>

	* Socket.cs (Sockets ): Set Accept()ed socket blocking status to
	be the same as the listening socket.  This follows MS behaviour.

2004-08-04  Dick Porter  <dick@ximian.com>

	* Socket.cs: Update Connected state in Select and Poll; this is
	when we find out that non-blocking Connects succeed.  Fixes bug
	62398.

2004-07-28  Dick Porter  <dick@ximian.com>

	* Socket.cs: ReceiveFrom might not return a valid EndPoint.  Patch
	by Nick Vaughan (dev@6wardlaw.freeserve.co.uk), fixes bug 61608.

2004-07-15  Dick Porter  <dick@ximian.com>

	* Socket.cs: Don't try and dereference a null array in Select()
	(possible if a descriptor list of length 0 was passed.)  Patch by
	Nick Vaughan (dev@6wardlaw.freeserve.co.uk), fixes bug 61595.

2004-07-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Socket.cs: if'ed RemoveReferences calls.

2004-07-09  Dick Porter  <dick@ximian.com>

	* Socket.cs: Slight tweak to allow unknown objects to be returned
	by GetSocketOption().

2004-06-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Socket.cs: connect on non-blocking sockets returns EINPROGRESS. Fixes
	bug #60811.

2004-06-23 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Socket.cs: wrong error code in connect and accept. EWOULDBLOCK is
	10035. Fixes bug #60563.

2004-06-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Socket.cs: fixed Accept for non-blocking sockets.

2004-06-10  Gert Driesen <drieseng@users.sourceforge.net>

	* LingerOption.cs: marked field private to fix API signature
	* MulticastOption.cs: marked field private to fix API signature

2004-06-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Socket.cs: throw ArgumentNullException if all the list are null OR
	empty. Fixes bug #59632.
